Do...something...with the frontend?
Should look slightly better now. Work slighly better, too.

    1. the "sign up" button on the landing page should work now;
    2. player controls are focusable.

--- a/static/css/error.css
+++ b/static/css/error.css
@@ -1,4 +1,4 @@
-html, body, .content {
+html, body, #content {
     margin: auto;
     height: 100%;
 }
@@ -8,7 +8,7 @@ body {
     background: #000;
 }
 
-.content {
+#content {
     padding: 2em;
     max-width: 1400px;
     max-height: 1000px;
