--- a/templates/error.html
+++ b/templates/error.html
@@ -7,7 +7,7 @@
         <title>webmcast: error {{.Code}}</title>
     </head>
     <body>
-        <div class="content">
+        <div id="content">
             <h1><a href="/">webmcast</a>
              // <span id="code">{{.Code}}</span>
              // <span id="message">{{.DisplayMessage}}</span></h1>
