--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -1,13 +1,15 @@
-<h2 data-tab="signup">Sign up</h2>
-<form method="POST" action="/user/new" data-xhrable>
-    <label for="username">Username</label>
-    <input name="username" type="text" required tabindex="1" />
-    <label for="password">Password</label>
-    <input name="password" type="password" required tabindex="1" />
-    <label for="email">Email</label>
-    <input name="email" type="email" required tabindex="1" />
-    {{/* todo: recaptcha, tos, privacy policy */}}
-    <p class="notice">By signing up you agree blah-blah-blah...</p>
-    <p class="error"></p>
-    <button type="submit" tabindex="1">Sign up</button>
-</form>
+<div class="form-wrapper">
+    <h2 data-tab="signup">Sign up</h2>
+    <form method="POST" action="/user/new" data-xhrable>
+        <label for="username">Username</label>
+        <input name="username" type="text" required />
+        <label for="password">Password</label>
+        <input name="password" type="password" required />
+        <label for="email">Email</label>
+        <input name="email" type="email" required />
+        {{/* todo: recaptcha, tos, privacy policy */}}
+        <p class="notice">By signing up you agree blah-blah-blah...</p>
+        <p class="error"></p>
+        <button type="submit">Sign up</button>
+    </form>
+</div>
