--- a/templates/user-login.html
+++ b/templates/user-login.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/global.css" />
-        <title>webmcast</title>
+        <title>webmcast // log in</title>
     </head>
     <body>
-        <article class="content" data-scrollbar>
+        <article id="content" data-scrollbar>
             {{ template "nav.html" }}
-            <section class="login-form center-block center-block-small">
+            <section class="center-block center-block-small">
                 {{ template "form-user-login.html" }}
             </section>
             {{ template "footer.html" }}
