--- a/templates/landing.html
+++ b/templates/landing.html
@@ -6,12 +6,13 @@
         <link rel="stylesheet" href="/static/css/global.css" />
         <title>webmcast</title>
         <style>
-            #main-bg { background: #dfe4e5; }
-            #final { text-align: center; }
-            #final button { font-size: 1.2em; }
-
             h1 { font: bold 2.5em monospace; }
             h4 { opacity: 0.66; }
+
+            section:last-of-type {
+                text-align: center;
+                font-size: 1.2em;
+            }
 
             .row {
                 padding: 1em;
@@ -32,11 +33,10 @@
         </style>
     </head>
     <body>
-        <article class="content" data-scrollbar>
+        <article id="content" data-scrollbar>
             {{ template "nav.html" . }}
-
-            <div id="main-bg">
-                <section class="center-block row">
+            <section class="invert-block">
+                <div class="center-block row">
                     <div><img src="/static/img/aware-of-dog.png" /></div>
                     <div>
                         <h1>watch dog.</h1>
@@ -44,46 +44,42 @@
                         <h4>* (It's kinda hard to show the most popular streams when there are
                                no streams at all, so have a stupid landing page instead.)</h4>
                     </div>
-                </section>
-            </div>
-            <section class="center-block">
-                <div>{{/* make the next row match :nth-child(2n) */}}</div>
-                <div class="row">
-                    <div><img src="/static/img/observing-dog.png" /></div>
-                    <div>
-                        <h2>1. Observe the dog</h2>
-                        <h3>Mount a camera onto a sentry station and point it
-                            directly at your best friend.</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div><img src="/static/img/mettaton.png" /></div>
-                    <div>
-                        <h2>2. Broadcast the dog</h2>
-                        <h3>Use cutting-edge opensource software to encode the video
-                            as a WebM file and send it over here.</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div><img /></div>
-                    <div>
-                        <h2>3. Watch the dog</h2>
-                        <h3>View the stream over the 'net (short for internet)
-                            while discussing it with others in a conveniently placed chat
-                            at the same time.</h3>
-                    </div>
-                </div>
-                <div id="final">
-                {{ if .User }}
-                    <h2>Oh, look, you've already signed up.</h2>
-                    <h3>Sorry, the streaming guide is not ready yet. Figure it out yourself.</h3>
-                {{- else -}}
-                    <h2>Yeah, uh...you have to sign up first.</h2>
-                    <button onclick="showLoginForm(true)">Okay!</button>
-                {{- end -}}
                 </div>
             </section>
-
+            <section class="center-block row">
+                <div><img src="/static/img/observing-dog.png" /></div>
+                <div>
+                    <h2>1. Observe the dog</h2>
+                    <h3>Mount a camera onto a sentry station and point it
+                        directly at your best friend.</h3>
+                </div>
+            </section>
+            <section class="center-block row">
+                <div><img src="/static/img/mettaton.png" /></div>
+                <div>
+                    <h2>2. Broadcast the dog</h2>
+                    <h3>Use cutting-edge opensource software to encode the video
+                        as a WebM file and send it over here.</h3>
+                </div>
+            </section>
+            <section class="center-block row">
+                <div><img /></div>
+                <div>
+                    <h2>3. Watch the dog</h2>
+                    <h3>View the stream over the 'net (short for internet)
+                        while discussing it with others in a conveniently placed chat
+                        at the same time.</h3>
+                </div>
+            </section>
+            <section class="center-block">
+            {{ if .User }}
+                <h3>Oh, look, you've already signed up.</h3>
+                <h4>Sorry, the streaming guide is not ready yet. Figure it out yourself.</h4>
+            {{- else -}}
+                <h3>Yeah, uh...you have to sign up first.</h3>
+                <a class="text-button" href="/user/new">Okay!</a>
+            {{- end -}}
+            </section>
             {{ template "footer.html" }}
         </article>
 
