--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -7,29 +7,26 @@
         <title>webmcast -- user config</title>
     </head>
     <body>
-        <article class="content" data-scrollbar>
+        <article id="content" data-scrollbar>
             {{ template "nav.html" . }}
-
-            <div class="section-highlight">
-                <section class="meta center-block">
+            <section class="invert-block">
+                <div class="meta center-block">
                     <img class="avatar" src="{{.User.GravatarURL 60}}" />
                     <div>
                         <h1>Hey there, {{.User.Name}}.</h1>
                         <h2>Stream URL:</h2>
                         <h2><a href="/stream/{{.User.Login}}?{{.User.StreamToken}}">Publish</a>
-                          // <a href="/{{.User.Login}}">View</a>
-                          // <a href="/stream/{{.User.Login}}">Download</a></h2>
+                         // <a href="/{{.User.Login}}">View</a>
+                         // <a href="/stream/{{.User.Login}}">Download</a></h2>
                     </div>
-                </section>
-            </div>
-
+                </div>
+            </section>
         {{ if not .User.Activated }}
-            <section class="center-block">
-                <div class="alert-warning">
-                    <h1>Your account is not activated.</h1>
+            <section class="warning-block">
+                <div class="center-block">
+                    <h3>Your account is not activated.</h3>
                     <p>You will not be able to broadcast until you confirm
                        your email address, {{.User.Email}}. (Check the inbox.)</p>
-
                     <form method="GET" action="/user/activate">
                         {{/* TODO remove this and instead offer to send another email. */}}
                         <input type="hidden" name="uid" value="{{.User.ID}}" />
@@ -39,25 +36,22 @@
                 </div>
             </section>
         {{- end -}}
-
-            <div class="row center-block">
-                <section class="login-form user-config-form">
+            <section class="row center-block">
+                <div class="form-wrapper">
                     <form method="POST" action="/user/new-token" data-xhrable>
                         <label>Your avatar is provided by Gravatar.</label>
                         <span class="notice">
-                            Visit <a href="https://gravatar.com/">gravatar.com</a>
-                            to change it.
+                            Visit <a href="https://gravatar.com/">gravatar.com</a> to change it.
                         </span>
                         <label>Your authentication token is</label>
                         <input type="text" value="{{.User.StreamToken}}" readonly />
                         <span class="notice">
-                            It's at the end of the "Publish" URL.
-                            Think it might have been compromised?
+                            It's at the end of the "Publish" URL. Think it might have been compromised?
                         </span>
                         <button type="submit">Get a new token</button>
                     </form>
-                </section>
-                <section class="login-form user-config-form">
+                </div>
+                <div class="form-wrapper">
                     <form method="POST" action="/user/cfg" data-xhrable>
                         <label for="password-old">Old password</label>
                         <input name="password-old" type="password" placeholder="Required to change anything." />
@@ -74,9 +68,8 @@
                         <span class="error"></span>
                         <button type="submit">Update</button>
                     </form>
-                </section>
-            </div>
-
+                </div>
+            </section>
             {{ template "footer.html" }}
         </article>
 
