Allow to control the volume slider with the keyboard.

--- a/templates/room.html
+++ b/templates/room.html
@@ -18,7 +18,7 @@
                     <svg width="{{or .Meta.Width 853}}" height="{{or .Meta.Height 480}}"></svg>
                     <video></video><div class="controls">
                         <a href="#" class="button mute" title="Mute"></a>
-                        <div class="volume" title="Volume"><div class="slider"></div></div>
+                        <div tabindex="0" class="volume" title="Volume"><div class="slider"></div></div>
                         <div class="status">not connected</div>
                         <a href="#" class="button theatre" title="Theatre mode"></a>
                         <a href="#" class="button fullscreen" title="Fullscreen"></a>
