Allow to use markup in stream descriptions.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -106,6 +106,10 @@ img, svg, video, audio, canvas {
     border-bottom-width: 4px;
 }
 
+[data-markup-html] + [data-markup] {
+    display: none;
+}
+
 form {
     position: relative;
 }
