Remove "for" attributes from labels.
Damn thing requires an *id*?

--- a/templates/form-user-login.html
+++ b/templates/form-user-login.html
@@ -1,9 +1,9 @@
 <div class="form-wrapper">
     <h2 data-tab="login">Log in</h2>
     <form method="POST" action="/user/login" data-xhrable>
-        <label for="username">Username</label>
+        <label>Username</label>
         <input name="username" type="text" required />
-        <label for="password">Password</label>
+        <label>Password</label>
         <input name="password" type="password" required />
         <p class="error"></p>
         <a href="/user/restore">Trouble logging in?</a>
