--- a/templates/form-user-new.html
+++ b/templates/form-user-new.html
@@ -1,11 +1,11 @@
 <div class="form-wrapper">
     <h2 data-tab="signup">Sign up</h2>
     <form method="POST" action="/user/new" data-xhrable>
-        <label for="username">Username</label>
+        <label>Username</label>
         <input name="username" type="text" required />
-        <label for="password">Password</label>
+        <label>Password</label>
         <input name="password" type="password" required />
-        <label for="email">Email</label>
+        <label>Email</label>
         <input name="email" type="email" required />
         {{/* todo: recaptcha, tos, privacy policy */}}
         <p class="notice">By signing up you agree blah-blah-blah...</p>
