--- a/templates/form-user-restore.html
+++ b/templates/form-user-restore.html
@@ -1,10 +1,10 @@
 <div class="form-wrapper">
     <h2 data-tab="restore">Password reset</h2>
     <form method="POST" action="/user/reset" data-xhrable>
-        <label for="username">Username</label>
+        <label>Username</label>
         <input name="username" type="text" />
         <p class="notice">&mdash; or &mdash;</p>
-        <label for="email">Email</label>
+        <label>Email</label>
         <input name="email" type="email" />
         <p class="notice">You'll receive further instructions by mail.</p>
         <p class="error"></p>
