--- a/templates/user-config.html
+++ b/templates/user-config.html
@@ -53,17 +53,17 @@
                 </div>
                 <div class="form-wrapper">
                     <form method="POST" action="/user/cfg" data-xhrable>
-                        <label for="password-old">Old password</label>
+                        <label>Old password</label>
                         <input name="password-old" type="password" placeholder="Required to change anything." />
-                        <label for="username">Username</label>
+                        <label>Username</label>
                         <input name="username" type="text" placeholder="{{.User.Login}}" />
                         <label form="displayname">Display name</label>
                         <input name="displayname" type="text" placeholder="{{.User.Name}}" />
-                        <label for="email">Email</label>
+                        <label>Email</label>
                         <input name="email" type="email" placeholder="{{.User.Email}}" />
-                        <label for="password">New password</label>
+                        <label>New password</label>
                         <input name="password" type="password" placeholder="Leave empty to keep the old one." />
-                        <label for="about">About yourself</label>
+                        <label>About yourself</label>
                         <textarea name="about" rows="6">{{.User.About}}</textarea>
                         <span class="error"></span>
                         <button type="submit">Update</button>
