--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,7 +7,6 @@
         <title>webmcast</title>
         <style>
             h1 { font: bold 2.5em monospace; }
-            h4 { opacity: 0.66; }
 
             section:last-of-type {
                 text-align: center;
@@ -35,48 +34,48 @@
     <body>
         <article id="content" data-scrollbar>
             {{ template "nav.html" . }}
-            <section class="invert-block">
+            <div class="invert-block">
                 <div class="center-block row">
-                    <div><img src="/static/img/aware-of-dog.png" /></div>
+                    <div><img src="/static/img/aware-of-dog.png" alt="" /></div>
                     <div>
                         <h1>watch dog.</h1>
                         <h2>Dogspotting as a Service</h2>
-                        <h4>* (It's kinda hard to show the most popular streams when there are
-                               no streams at all, so have a stupid landing page instead.)</h4>
+                        <p>* (It's kinda hard to show the most popular streams when there are
+                              no streams at all, so have a stupid landing page instead.)</p>
                     </div>
                 </div>
-            </section>
+            </div>
             <section class="center-block row">
-                <div><img src="/static/img/observing-dog.png" /></div>
+                <div><img src="/static/img/observing-dog.png" alt="" /></div>
                 <div>
                     <h2>1. Observe the dog</h2>
-                    <h3>Mount a camera onto a sentry station and point it
-                        directly at your best friend.</h3>
+                    <p>Mount a camera onto a sentry station and point it
+                       directly at your best friend.</p>
                 </div>
             </section>
             <section class="center-block row">
-                <div><img src="/static/img/mettaton.png" /></div>
+                <div><img src="/static/img/mettaton.png" alt="" /></div>
                 <div>
                     <h2>2. Broadcast the dog</h2>
-                    <h3>Use cutting-edge opensource software to encode the video
-                        as a WebM file and send it over here.</h3>
+                    <p>Use cutting-edge opensource software to encode the video
+                       as a WebM file and send it over here.</p>
                 </div>
             </section>
             <section class="center-block row">
-                <div><img /></div>
+                <div><img src="about:blank" alt="..." /></div>
                 <div>
                     <h2>3. Watch the dog</h2>
-                    <h3>View the stream over the 'net (short for internet)
-                        while discussing it with others in a conveniently placed chat
-                        at the same time.</h3>
+                    <p>View the stream over the 'net (short for internet)
+                       while discussing it with others in a conveniently placed chat
+                       at the same time.</p>
                 </div>
             </section>
             <section class="center-block">
             {{ if .User }}
-                <h3>Oh, look, you've already signed up.</h3>
-                <h4>Sorry, the streaming guide is not ready yet. Figure it out yourself.</h4>
+                <h2>Oh, look, you've already signed up.</h2>
+                <p>Sorry, the streaming guide is not ready yet. Figure it out yourself.</p>
             {{- else -}}
-                <h3>Yeah, uh...you have to sign up first.</h3>
+                <h2>Yeah, uh...you have to sign up first.</h2>
                 <a class="text-button" href="/user/new">Okay!</a>
             {{- end -}}
             </section>
