Hide horizontal overflow in <pre> inside marked-up text.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -118,6 +118,10 @@ img, svg, video, audio, canvas {
     display: none;
 }
 
+[data-markup-html] pre {
+    overflow-x: auto;
+}
+
 form {
     position: relative;
 }
